feat: moving code from Transactions to Add and creating transactions list

--- a/src/views/Transactions/Transactions.module.scss
+++ b/src/views/Transactions/Transactions.module.scss
@@ -3,6 +3,14 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  justify-content: center;
   width: 100%;
+
+  .transactions__list {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
 }
