style: adding shadow in the cards

--- a/src/views/Transactions/Transaction/Transaction.module.scss
+++ b/src/views/Transactions/Transaction/Transaction.module.scss
@@ -1,5 +1,6 @@
 .transaction {
   align-items: center;
+  box-shadow: var(--subtle-drop-shadow);
   display: flex;
   justify-content: space-between;
   padding: var(--spacing-small) var(--spacing-base);
