--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -58,7 +58,7 @@
   --zindex-page: 1000;
   --zindex-dropdown: 4000;
   --zindex-modal: 5000;
-  --zindex-modal-btn: 6000;
+  --zindex-modal-content: 6000;
   --zindex-loader: 8000;
   --zindex-notification: 9000;
   --zindex-tooltip: 9000;
@@ -70,10 +70,10 @@
   --subtle-inner-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.08);
 
   --color-info: #218bda;
-  --color-success: #00a53a;
+  --color-success: #085d2d;
   --color-alert: #f2bd1b;
   --color-warning: #f27f1b;
-  --color-danger: #eb3c3c;
+  --color-danger: #b31212;
   --color-highlight: #085d2d;
 
   --gold-lightest: #e7dbc9;
@@ -101,8 +101,8 @@ body {
   display: flex;
   flex-direction: column;
   font-family: 'Roboto';
-  justify-content: center;
-  height: var(--app-height);
+  height: 100vh;
+  overflow: hidden;
   margin: 0;
   width: 100vw;
 }
