--- a/src/views/Transactions/Add/Add.module.scss
+++ b/src/views/Transactions/Add/Add.module.scss
@@ -4,5 +4,37 @@
   flex-direction: column;
   height: 100%;
   justify-content: center;
+  opacity: 1;
+  position: absolute;
+  transition: opacity ease-out 300ms;
   width: 100%;
+  z-index: var(--zindex-modal-content);
+
+  &.hidden {
+    opacity: 0;
+    transition: opacity ease-out 600ms;
+    transition-delay: 100ms;
+    z-index: 0;
+  }
+}
+
+.add__button {
+  background-color: var(--color-success);
+  border-radius: var(--full-radius);
+  bottom: calc(var(--navbar-height) + var(--spacing-small));
+  box-shadow: var(--long-drop-shadow);
+  color: white;
+  font-size: 32px;
+  height: var(--spacing-large);
+  position: fixed;
+  right: var(--spacing-small);
+  width: var(--spacing-large);
+  z-index: var(--zindex-modal);
+
+  &.add__button__isopened {
+    background-color: var(--gold-lightest);
+    color: var(--gold-lightest);
+    transform: scale(100);
+    transition: transform ease-out 600ms;
+  }
 }
