--- a/src/views/Transactions/Transactions.module.scss
+++ b/src/views/Transactions/Transactions.module.scss
@@ -1,15 +1,15 @@
 .transactions {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
   height: 100%;
+  position: relative;
   width: 100%;
 
   .transactions__list {
     display: flex;
     flex-direction: column;
+    height: 100%;
     list-style-type: none;
     margin: 0;
+    overflow-y: auto;
     padding: 0;
     width: 100%;
   }
