--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,30 +1,47 @@
 .btn {
-  background-color: var(--gold-lightest);
-  box-shadow: -6px -6px 26px rgba(255, 255, 255, 0.8), 5px 10px 15px rgba(0, 0, 0, 0.05), 15px 20px 35px rgba(0, 0, 0, 0.1),
-    inset -2px -2px 2px rgba(0, 0, 0, 0.2), inset -1px -1px 3px rgba(255, 255, 255, 0.6), inset 2px 2px 8px rgba(255, 255, 255, 0.2),
-    inset 1px 1px 8px rgba(255, 255, 255, 0.2), -6px -6px 26px rgba(255, 255, 255, 0.8);
   box-sizing: border-box;
-  color: var(--gold-darker);
   cursor: pointer;
   text-align: center;
-  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
   transition: 600ms ease-out;
 
-  &:hover {
-    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.2), 5px 10px 35px rgba(0, 0, 0, 0.1), 8px 10px 25px rgba(0, 0, 0, 0.1),
-      inset -1px -1px 9px rgba(0, 0, 0, 0.2), inset -1px -1px 3px rgba(255, 255, 255, 0.6), inset 1px 1px 8px rgba(255, 255, 255, 1),
-      inset 4px 4px 24px rgba(0, 0, 0, 0.15), -5px -5px 15px rgba(255, 255, 255, 0.9);
-    transform: scale(0.98);
+  &.primary {
+    background-color: var(--color-success);
+    box-shadow: var(--subtle-drop-shadow);
+    color: var(--gold-lightest);
   }
 
-  &:active,
-  &:focus {
-    background-color: var(--gold-lighter);
-    box-shadow: inset 2px 2px 16px rgba(255, 255, 255, 0.9), inset 8px 8px 9px rgba(0, 0, 0, 0.2), 5px 10px 5px rgba(0, 0, 0, 0.03),
-      -5px -5px 25px rgba(255, 255, 255, 0.1), -2px -2px 9px rgba(100, 100, 100, 0.1), inset -2px -2px 9px rgba(255, 255, 255, 1);
-    outline: none;
-    text-shadow: -2px -2px 3px rgba(0, 0, 0, 0.2), 2px 2px 3px rgba(255, 255, 255, 1);
-    transform: translateY(2px);
+  &.secondary {
+    background-color: var(--gold-lightest);
+    box-shadow: -6px -6px 26px rgba(255, 255, 255, 0.8), 5px 10px 15px rgba(0, 0, 0, 0.05), 15px 20px 35px rgba(0, 0, 0, 0.1),
+      inset -2px -2px 2px rgba(0, 0, 0, 0.2), inset -1px -1px 3px rgba(255, 255, 255, 0.6), inset 2px 2px 8px rgba(255, 255, 255, 0.2),
+      inset 1px 1px 8px rgba(255, 255, 255, 0.2), -6px -6px 26px rgba(255, 255, 255, 0.8);
+    color: var(--gold-darker);
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+
+    &:hover {
+      box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.2), 5px 10px 35px rgba(0, 0, 0, 0.1), 8px 10px 25px rgba(0, 0, 0, 0.1),
+        inset -1px -1px 9px rgba(0, 0, 0, 0.2), inset -1px -1px 3px rgba(255, 255, 255, 0.6), inset 1px 1px 8px rgba(255, 255, 255, 1),
+        inset 4px 4px 24px rgba(0, 0, 0, 0.15), -5px -5px 15px rgba(255, 255, 255, 0.9);
+      transform: scale(0.98);
+    }
+
+    &:active,
+    &:focus {
+      background-color: var(--gold-lighter);
+      box-shadow: inset 2px 2px 16px rgba(255, 255, 255, 0.9), inset 8px 8px 9px rgba(0, 0, 0, 0.2), 5px 10px 5px rgba(0, 0, 0, 0.03),
+        -5px -5px 25px rgba(255, 255, 255, 0.1), -2px -2px 9px rgba(100, 100, 100, 0.1), inset -2px -2px 9px rgba(255, 255, 255, 1);
+      outline: none;
+      text-shadow: -2px -2px 3px rgba(0, 0, 0, 0.2), 2px 2px 3px rgba(255, 255, 255, 1);
+      transform: translateY(2px);
+    }
+  }
+
+  &.outline {
+    background-color: transparent;
+    border: 2px solid var(--gold-dark);
+    border-radius: var(--full-radius);
+    box-shadow: var(--subtle-drop-shadow);
+    color: var(--gold);
   }
 }
 
