--- a/src/components/Observation/Observation.module.scss
+++ b/src/components/Observation/Observation.module.scss
@@ -13,6 +13,15 @@
     margin-bottom: var(--spacing-small);
   }
 
+  .observation__inputcontainer {
+    display: flex;
+    gap: var(--spacing-small);
+
+    & > button {
+      width: 36px;
+    }
+  }
+
   &.hidden {
     position: fixed;
     top: 200%;
