--- a/src/views/Transactions/Add/Add.module.scss
+++ b/src/views/Transactions/Add/Add.module.scss
@@ -5,6 +5,7 @@
   height: 100%;
   justify-content: center;
   opacity: 1;
+  padding: var(--spacing-base);
   position: absolute;
   transition: opacity ease-out 300ms;
   width: 100%;
