--- a/src/views/App/App.module.scss
+++ b/src/views/App/App.module.scss
@@ -1,4 +1,5 @@
 .app {
-  height: var(--app-height);
   background-color: var(--gold-lightest);
+  height: var(--app-height);
+  margin-top: var(--header-height);
 }
