--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -97,6 +97,25 @@
   --app-height: calc(100vh - 2 * var(--navbar-height));
 }
 
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+  background-color: var(--gold-lightest);
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  background-color: var(--gold-lightest);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+  background-color: var(--gold-light);
+}
+
 body {
   background-color: var(--gold-lightest);
   display: flex;
