--- a/src/views/Transactions/Add/Add.module.scss
+++ b/src/views/Transactions/Add/Add.module.scss
@@ -2,13 +2,11 @@
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  height: 100%;
   justify-content: center;
   opacity: 1;
-  padding: var(--spacing-base);
   position: absolute;
+  top: 0;
   transition: opacity ease-out 300ms;
-  width: 100%;
   z-index: var(--zindex-modal-content);
 
   &.hidden {
@@ -19,23 +17,48 @@
   }
 }
 
+.add__close {
+  align-items: center;
+  border-radius: var(--full-radius);
+  display: flex;
+  justify-content: center;
+  opacity: 1;
+  padding: var(--spacing-tiny);
+  position: fixed;
+  right: var(--spacing-base);
+  top: var(--spacing-base);
+  transition: opacity ease-out 600ms;
+  transition-delay: 300ms;
+  z-index: var(--zindex-modal-content);
+
+  &.hidden {
+    opacity: 0;
+    transition: opacity ease-out 600ms;
+    z-index: 0;
+  }
+}
+
 .add__button {
+  align-items: center;
   background-color: var(--color-success);
   border-radius: var(--full-radius);
   bottom: calc(var(--navbar-height) + var(--spacing-small));
   box-shadow: var(--long-drop-shadow);
   color: white;
+  display: flex;
   font-size: 32px;
   height: var(--spacing-large);
+  justify-content: center;
   position: fixed;
   right: var(--spacing-small);
+  transition: background-color ease-out 600ms;
   width: var(--spacing-large);
   z-index: var(--zindex-modal);
 
   &.add__button__isopened {
     background-color: var(--gold-lightest);
     color: var(--gold-lightest);
-    transform: scale(100);
+    transform: scale(200);
     transition: transform ease-out 600ms;
   }
 }
