--- a/src/components/Observation/Observation.module.scss
+++ b/src/components/Observation/Observation.module.scss
@@ -1,9 +1,12 @@
 .observation {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  justify-content: center;
   position: fixed;
-  top: 50%;
+  top: 0;
   transition: 600ms ease-out;
+  width: calc(100% - 2 * var(--spacing-base));
 
   .observation__label {
     color: var(--gold-darker);
@@ -24,13 +27,13 @@
 
   &.hidden {
     position: fixed;
-    top: 200%;
+    top: 100%;
     transition: 600ms ease-out;
   }
 
   &.selected {
     position: fixed;
-    top: -200%;
+    top: -100%;
     transition: 600ms ease-in;
   }
 }
