--- a/src/components/TransactionType/TransactionType.module.scss
+++ b/src/components/TransactionType/TransactionType.module.scss
@@ -1,9 +1,12 @@
 .transactionType {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  justify-content: center;
   position: fixed;
-  top: 50%;
+  top: 0;
   transition: 600ms ease-out;
+  width: calc(100% - 2 * var(--spacing-base));
 
   .transactionType__label {
     color: var(--gold-darker);
@@ -20,7 +23,7 @@
 
   &.selected {
     position: fixed;
-    top: -200%;
+    top: -100%;
     transition: 600ms ease-in;
   }
 }
