--- a/src/components/Categories/Categories.module.scss
+++ b/src/components/Categories/Categories.module.scss
@@ -1,9 +1,12 @@
 .categories {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  justify-content: center;
   position: fixed;
-  top: 50%;
+  top: 0;
   transition: 600ms ease-out;
+  width: calc(100% - 2 * var(--spacing-base));
 
   .categories__label {
     color: var(--gold-darker);
@@ -15,21 +18,37 @@
 
   .categories__items {
     display: flex;
+    flex-wrap: wrap;
+    gap: var(--spacing-small);
 
     .categories__button {
-      margin-right: var(--spacing-small);
+      align-items: center;
+      display: flex;
+      justify-content: center;
+
+      :first-child {
+        margin-right: var(--spacing-tiny);
+      }
     }
   }
 
   &.hidden {
     position: fixed;
-    top: 200%;
+    top: 100%;
     transition: 600ms ease-out;
   }
 
   &.selected {
     position: fixed;
-    top: -200%;
+    top: -100%;
     transition: 600ms ease-in;
+  }
+
+  .categories__add {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-tiny);
+    padding: var(--spacing-small);
+    width: 100%;
   }
 }
