style: changing the background color

--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -1,5 +1,5 @@
 .input {
-  background: var(--gold-light);
+  background: var(--gold-lighter);
   border: 1px solid var(--gold-darker);
   border-radius: var(--subtle-radius);
   box-shadow: var(--subtle-inner-shadow);
