style: changing color

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -40,8 +40,8 @@
 
   &.outline {
     background-color: transparent;
-    border: 2px solid var(--gold-dark);
-    color: var(--gold);
+    border: 2px solid var(--gold-darker);
+    color: var(--gold-darker);
   }
 }
 
