chore: correcting app's height

--- a/src/views/App/App.module.scss
+++ b/src/views/App/App.module.scss
@@ -1,5 +1,4 @@
 .app {
   background-color: var(--gold-lightest);
-  height: var(--app-height);
-  margin-top: var(--header-height);
+  height: 100vh;
 }
