--- a/src/views/Login/Login.module.scss
+++ b/src/views/Login/Login.module.scss
@@ -1,15 +1,17 @@
 .login {
   align-items: center;
-  background-image: url('../../assets/logo_main.png');
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-size: contain;
   display: flex;
   flex-direction: column;
   height: 100%;
   justify-content: center;
   padding: var(--spacing-base);
   width: 100%;
+
+  .login__logo {
+    height: auto;
+    max-width: 40vh;
+    width: 100%;
+  }
 
   .login__fields {
     display: flex;
