feat: adding balance

--- a/src/views/Transactions/Transactions.module.scss
+++ b/src/views/Transactions/Transactions.module.scss
@@ -42,15 +42,60 @@
     }
   }
 
-  .transactions__list {
+  .transactions__container {
+    align-items: flex-end;
+    border: 2px solid var(--gold-light);
     border-radius: var(--medium-radius);
     display: flex;
     flex-direction: column;
     height: calc(100% - var(--font-size-h3) - var(--spacing-small));
-    list-style-type: none;
     margin: 0;
-    overflow-y: auto;
     padding: 0;
+    position: relative;
     width: 100%;
+
+    .transactions__balance {
+      align-items: center;
+      background-color: var(--gold-lightest);
+      border-bottom: 2px solid var(--gold);
+      display: flex;
+      height: 60px;
+      justify-content: center;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+
+      .transactions__label {
+        color: var(--gold-darker);
+        font-size: var(--font-size-md);
+        font-weight: var(--font-weight-semibold);
+        line-height: var(--line-height-simple);
+        margin-right: var(--spacing-tiny);
+      }
+
+      .transactions__value {
+        font-size: var(--font-size-lg);
+        font-weight: var(--font-weight-semibold);
+        line-height: var(--line-height-simple);
+      }
+
+      .transactions__difference {
+        @extend .transactions__value;
+        color: var(--color-success);
+      }
+    }
+
+    .transactions__list {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      list-style-type: none;
+      margin: 0;
+      overflow-y: auto;
+      padding: 0;
+      padding-top: 60px;
+      width: 100%;
+    }
   }
 }
