--- a/src/views/Transactions/Add/Add.module.scss
+++ b/src/views/Transactions/Add/Add.module.scss
@@ -43,7 +43,7 @@
   align-items: center;
   background-color: var(--color-success);
   border-radius: var(--full-radius);
-  bottom: calc(var(--navbar-height) + var(--spacing-small));
+  bottom: calc(var(--navbar-height) + var(--spacing-tiny));
   box-shadow: var(--long-drop-shadow);
   color: white;
   display: flex;
@@ -51,7 +51,7 @@
   height: var(--spacing-large);
   justify-content: center;
   position: fixed;
-  right: var(--spacing-small);
+  right: var(--spacing-tiny);
   transition: background-color ease-out 600ms;
   width: var(--spacing-large);
   z-index: var(--zindex-overlay);
