--- a/src/views/Transactions/Balance/Balance.module.scss
+++ b/src/views/Transactions/Balance/Balance.module.scss
@@ -1,73 +1,82 @@
 .balance {
   align-items: center;
   background-color: var(--gold-lightest);
-  border-bottom: 2px solid var(--gold);
+  border: 2px solid var(--gold);
+  border-bottom: 0;
+  border-top: 0;
   box-shadow: var(--medium-drop-shadow);
   display: flex;
-  height: 60px;
   justify-content: center;
-  left: 0;
-  position: absolute;
-  top: 0;
+  position: relative;
   width: 100%;
 
-  .balance__label {
-    color: var(--gold-darker);
-    font-size: var(--font-size-md);
-    font-weight: var(--font-weight-semibold);
-    line-height: var(--line-height-simple);
-    margin-right: var(--spacing-tiny);
-  }
+  .balance__button {
+    align-items: center;
+    background-color: var(--gold-lightest);
+    display: flex;
+    height: 60px;
+    justify-content: center;
+    width: 100%;
+    z-index: var(--zindex-header);
 
-  .balance__value {
-    font-size: var(--font-size-lg);
-    font-weight: var(--font-weight-semibold);
-    line-height: var(--line-height-simple);
-
-    &.balance__positive {
-      color: var(--color-success);
+    .balance__label {
+      color: var(--gold-darker);
+      font-size: var(--font-size-md);
+      font-weight: var(--font-weight-semibold);
+      line-height: var(--line-height-simple);
+      margin-right: var(--spacing-tiny);
     }
 
-    &.balance__negative {
-      color: var(--color-danger);
+    .balance__value {
+      font-size: var(--font-size-lg);
+      font-weight: var(--font-weight-semibold);
+      line-height: var(--line-height-simple);
+
+      &.balance__positive {
+        color: var(--color-success);
+      }
+
+      &.balance__negative {
+        color: var(--color-danger);
+      }
+
+      &.balance__neutral {
+        color: var(--gold-darkest);
+      }
     }
 
-    &.balance__neutral {
-      color: var(--gold-darkest);
-    }
-  }
-
-  .balance__icon {
-    position: absolute;
-    right: var(--spacing-small);
-    top: var(--spacing-small);
-    transform: rotate(180deg);
-    transition: all ease 300ms;
-
-    &.balance__active {
-      transform: rotate(0deg);
+    .balance__icon {
+      position: absolute;
+      right: var(--spacing-small);
+      top: var(--spacing-small);
+      transform: rotate(180deg);
       transition: all ease 300ms;
+
+      &.balance__active {
+        transform: rotate(0deg);
+        transition: all ease 300ms;
+      }
     }
   }
 
   .balance__nav {
     align-items: center;
     background-color: var(--gold-lightest);
-    display: none;
-    height: 0;
+    box-shadow: var(--medium-drop-shadow);
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
     justify-content: space-between;
     padding: var(--spacing-small);
     position: absolute;
-    transition: all ease 300ms;
+    top: -100vh;
+    transition: all ease-in 300ms;
     width: 100%;
+    z-index: var(--zindex-tab);
 
-    &.balance__active {
-      top: 59px;
-      box-shadow: var(--medium-drop-shadow);
-      display: flex;
-      flex-direction: column;
-      height: fit-content;
-      transition: all ease 300ms;
+    &.balance__nav__active {
+      top: 60px;
+      transition: all ease-out 300ms;
     }
 
     .balance__results {
@@ -108,27 +117,6 @@
         .results__investiments {
           @extend .results__value;
           color: var(--color-danger);
-        }
-      }
-    }
-
-    .balance__filters {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-
-      .filters__group {
-        align-items: center;
-        display: flex;
-        margin-bottom: var(--spacing-tiny);
-        width: 100%;
-
-        .filters__label {
-          color: var(--gold-dark);
-          font-size: var(--font-size-xs);
-          font-weight: var(--font-weight-semibold);
-          line-height: var(--line-height-simple);
-          width: 50%;
         }
       }
     }
