--- a/src/views/Transactions/Balance/Balance.module.scss
+++ b/src/views/Transactions/Balance/Balance.module.scss
@@ -52,7 +52,7 @@
       transform: rotate(180deg);
       transition: all ease 300ms;
 
-      &.balance__active {
+      &.balance__nav__active {
         transform: rotate(0deg);
         transition: all ease 300ms;
       }
@@ -116,7 +116,7 @@
 
         .results__investiments {
           @extend .results__value;
-          color: var(--color-danger);
+          color: var(--gold-dark);
         }
       }
     }
