--- a/src/views/Transactions/Filters/Filters.module.scss
+++ b/src/views/Transactions/Filters/Filters.module.scss
@@ -2,20 +2,21 @@
   border: 1px solid var(--gold);
   display: flex;
   flex-direction: column;
+  gap: var(--spacing-tiny);
   padding: var(--spacing-tiny);
+  padding-bottom: 0;
   width: 100%;
 
   .filters__group {
     align-items: center;
     display: flex;
     gap: var(--spacing-tiny);
-    margin-bottom: var(--spacing-small);
     width: 100%;
 
     .filters__label {
       color: var(--gold-dark);
       font-size: var(--font-size-xs);
-      font-weight: var(--font-weight-semibold);
+      font-weight: var(--font-weight-bold);
       line-height: var(--line-height-simple);
       width: 40%;
     }
@@ -26,10 +27,6 @@
 
     .filters__submit {
       width: 100%;
-    }
-
-    &:last-of-type {
-      margin-bottom: 0;
     }
   }
 }
