feat: showing all inputs at the top of application after selecting a value for it

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   cursor: pointer;
   text-align: center;
-  transition: 600ms ease-out;
+  transition: all 600ms ease-out;
 
   &.primary {
     background-color: var(--color-success);
