--- a/src/components/Value/Value.module.scss
+++ b/src/components/Value/Value.module.scss
@@ -1,19 +1,19 @@
 .value {
+  bottom: var(--spacing-base);
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 2 * (44px + 24px));
+  height: fit-content;
   justify-content: center;
   padding: var(--spacing-base);
   position: fixed;
-  top: calc(44px + 24px);
-  transition: 600ms ease-out;
+  transition: all 600ms ease-out;
   width: 100%;
 
   .value__label {
     color: var(--gold-darker);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
+    font-size: var(--font-size-md);
+    font-weight: var(--font-weight-semibold);
+    line-height: var(--line-height-sm);
     margin-bottom: var(--spacing-small);
   }
 
@@ -26,15 +26,40 @@
     }
   }
 
-  &.hidden {
-    position: fixed;
-    top: 100%;
-    transition: 600ms ease-out;
+  &.value__bottom {
+    bottom: -100vh;
+    transition: all 600ms ease-out;
   }
 
-  &.selected {
-    position: fixed;
-    top: -100%;
-    transition: 600ms ease-in;
+  &.value__top {
+    bottom: 100vh;
+    transition: all 600ms ease-in;
   }
+}
+
+.value__unselected {
+  align-items: center;
+  display: flex;
+  gap: var(--spacing-small);
+  opacity: 0;
+  padding: var(--spacing-tiny) var(--spacing-base);
+  transition: all 300ms ease-in 600ms;
+  width: 100%;
+
+  .value__label {
+    color: var(--gold-darker);
+    font-size: var(--font-size-md);
+    font-weight: var(--font-weight-semibold);
+    line-height: var(--line-height-sm);
+    width: 40%;
+  }
+
+  .value__input {
+    width: 60%;
+  }
+}
+
+.value__selected {
+  @extend .value__unselected;
+  opacity: 1;
 }
