--- a/src/components/Categories/Categories.module.scss
+++ b/src/components/Categories/Categories.module.scss
@@ -1,20 +1,20 @@
 .categories {
+  bottom: var(--spacing-base);
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 2 * (44px + 24px));
+  height: fit-content;
   justify-content: center;
   padding: var(--spacing-base);
   position: fixed;
-  top: calc(44px + 24px);
-  transition: 600ms ease-out;
+  transition: all 600ms ease-out;
   width: 100%;
 
   .categories__label {
     color: var(--gold-darker);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-    margin-bottom: var(--spacing-small);
+    font-size: var(--font-size-md);
+    font-weight: var(--font-weight-semibold);
+    line-height: var(--line-height-sm);
+    margin-bottom: var(--spacing-base);
   }
 
   .categories__items {
@@ -33,30 +33,55 @@
     }
   }
 
-  &.hidden {
-    position: fixed;
-    top: 100%;
-    transition: 600ms ease-out;
+  &.categories__bottom {
+    bottom: -100vh;
+    transition: all 600ms ease-out;
   }
 
-  &.selected {
-    position: fixed;
-    top: -100%;
-    transition: 600ms ease-in;
+  &.categories__top {
+    bottom: 100vh;
+    transition: all 600ms ease-in;
+  }
+}
+
+.categories__unselected {
+  align-items: center;
+  display: flex;
+  gap: var(--spacing-small);
+  opacity: 0;
+  padding: var(--spacing-tiny) var(--spacing-base);
+  transition: all 300ms ease-in 600ms;
+  width: 100%;
+
+  .categories__label {
+    color: var(--gold-darker);
+    font-size: var(--font-size-md);
+    font-weight: var(--font-weight-semibold);
+    line-height: var(--line-height-sm);
+    width: 40%;
   }
 
-  .categories__modal {
-    display: flex;
-    flex-direction: column;
-    padding: var(--spacing-small);
-    width: 100%;
+  .categories__select {
+    width: 60%;
+  }
+}
 
-    span {
-      margin-bottom: var(--spacing-nano);
-    }
+.categories__selected {
+  @extend .categories__unselected;
+  opacity: 1;
+}
 
-    input {
-      margin-bottom: var(--spacing-small);
-    }
+.categories__modal {
+  display: flex;
+  flex-direction: column;
+  padding: var(--spacing-small);
+  width: 100%;
+
+  span {
+    margin-bottom: var(--spacing-nano);
+  }
+
+  input {
+    margin-bottom: var(--spacing-small);
   }
 }
