--- a/src/components/Subcategories/Subcategories.module.scss
+++ b/src/components/Subcategories/Subcategories.module.scss
@@ -1,20 +1,20 @@
 .subcategories {
+  bottom: var(--spacing-base);
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 2 * (44px + 24px));
+  height: fit-content;
   justify-content: center;
   padding: var(--spacing-base);
   position: fixed;
-  top: calc(44px + 24px);
-  transition: 600ms ease-out;
+  transition: all 600ms ease-out;
   width: 100%;
 
   .subcategories__label {
     color: var(--gold-darker);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-    margin-bottom: var(--spacing-small);
+    font-size: var(--font-size-md);
+    font-weight: var(--font-weight-semibold);
+    line-height: var(--line-height-sm);
+    margin-bottom: var(--spacing-base);
   }
 
   .subcategories__items {
@@ -33,78 +33,103 @@
     }
   }
 
-  &.hidden {
-    position: fixed;
-    top: 100%;
-    transition: 600ms ease-out;
+  &.subcategories__bottom {
+    bottom: -100vh;
+    transition: all 600ms ease-out;
   }
 
-  &.selected {
-    position: fixed;
-    top: -100%;
-    transition: 600ms ease-in;
+  &.subcategories__top {
+    bottom: 100vh;
+    transition: all 600ms ease-in;
+  }
+}
+
+.subcategories__unselected {
+  align-items: center;
+  display: flex;
+  gap: var(--spacing-small);
+  opacity: 0;
+  padding: var(--spacing-tiny) var(--spacing-base);
+  transition: all 300ms ease-in 600ms;
+  width: 100%;
+
+  .subcategories__label {
+    color: var(--gold-darker);
+    font-size: var(--font-size-md);
+    font-weight: var(--font-weight-semibold);
+    line-height: var(--line-height-sm);
+    width: 40%;
   }
 
-  .subcategories__modal {
+  .subcategories__select {
+    width: 60%;
+  }
+}
+
+.subcategories__selected {
+  @extend .subcategories__unselected;
+  opacity: 1;
+}
+
+.subcategories__modal {
+  display: flex;
+  flex-direction: column;
+  padding: var(--spacing-small);
+  width: 100%;
+
+  .subcategories__label {
+    margin-bottom: var(--spacing-nano);
+  }
+
+  .subcategories__input {
+    margin-bottom: var(--spacing-small);
+  }
+
+  .subcategories__costing {
     display: flex;
     flex-direction: column;
-    padding: var(--spacing-small);
-    width: 100%;
+    gap: var(--spacing-nano);
+    justify-content: space-around;
+    margin-bottom: var(--spacing-small);
 
-    .subcategories__label {
-      margin-bottom: var(--spacing-nano);
-    }
-
-    .subcategories__input {
-      margin-bottom: var(--spacing-small);
-    }
-
-    .subcategories__costing {
+    .subcategories__radiocontainer {
+      align-items: center;
       display: flex;
-      flex-direction: column;
-      gap: var(--spacing-nano);
-      justify-content: space-around;
-      margin-bottom: var(--spacing-small);
 
-      .subcategories__radiocontainer {
+      .subcategories__input {
+        height: 0;
+        margin: 0;
+        opacity: 0;
+        visibility: hidden;
+        width: 0;
+      }
+
+      .subcategories__input:checked + .subcategories__radio::before {
+        background: var(--color-success);
+        border: 2px solid var(--color-success);
+      }
+
+      .subcategories__radio {
         align-items: center;
+        color: var(--gold-darker);
+        cursor: pointer;
         display: flex;
+        font-size: var(--font-size-lg);
+        font-weight: var(--font-weight-normal);
+        line-height: var(--line-height-xs);
+        margin: 0;
+        margin-left: var(--spacing-tiny);
+      }
 
-        .subcategories__input {
-          height: 0;
-          margin: 0;
-          opacity: 0;
-          visibility: hidden;
-          width: 0;
-        }
-
-        .subcategories__input:checked + .subcategories__radio::before {
-          background: var(--color-success);
-          border: 2px solid var(--color-success);
-        }
-
-        .subcategories__radio {
-          align-items: center;
-          color: var(--gold-darker);
-          cursor: pointer;
-          display: flex;
-          font-size: var(--font-size-lg);
-          font-weight: var(--font-weight-normal);
-          line-height: var(--line-height-xs);
-          margin: 0;
-          margin-left: var(--spacing-tiny);
-        }
-
-        .subcategories__radio::before {
-          display: inline-block;
-          content: '';
-          height: 12px;
-          width: 12px;
-          margin-right: var(--spacing-tiny);
-          border: 2px solid var(--gold-darker);
-          border-radius: var(--full-radius);
-          transition: all 0.25s linear;
-        }
+      .subcategories__radio::before {
+        display: inline-block;
+        content: '';
+        height: 12px;
+        width: 12px;
+        margin-right: var(--spacing-tiny);
+        border: 2px solid var(--gold-darker);
+        border-radius: var(--full-radius);
+        transition: all 0.25s linear;
       }
     }
   }
